# holy-blocker

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/skills/ci-workflows/: SKILL.md
.claude/skills/test/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci-js.yml  ci-rust.yml  ci.yml  codeql.yml
apps/desktop/: package.json  tsconfig.json  tsconfig.main.json  vite.config.ts
apps/desktop/src/main/: daemon-ipc.ts  ipc-handlers.ts  main.ts
apps/desktop/src/main/__tests__/: daemon-ipc.test.ts
apps/desktop/src/preload/: preload.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/renderer/src/: App.tsx  styles.css
apps/mobile/: .gitignore  settings.gradle.kts
apps/mobile/app/: build.gradle.kts
apps/mobile/app/src/main/: AndroidManifest.xml
apps/mobile/app/src/main/kotlin/com/holyblocker/mobile/: GuardSuspension.kt  MainActivity.kt  OverlayController.kt  ScreenGuardService.kt
apps/mobile/app/src/main/kotlin/com/holyblocker/mobile/admin/: HolyBlockerAdminReceiver.kt
apps/mobile/app/src/main/kotlin/com/holyblocker/mobile/policy/: AccessibilityServiceStatus.kt  NativeTextPolicy.kt  ReleaseSchedule.kt  RescanSchedule.kt  ScanGate.kt  SettingsGuard.kt  TextAssembler.kt  TextPolicy.kt  WindowResolver.kt
apps/mobile/app/src/main/res/values/: strings.xml  themes.xml
apps/mobile/app/src/main/res/xml/: accessibility_service_config.xml  device_admin.xml
apps/mobile/app/src/test/kotlin/com/holyblocker/mobile/policy/: AccessibilityServiceStatusTest.kt  ReleaseScheduleTest.kt  RescanScheduleTest.kt  ScanGateTest.kt  SettingsGuardTest.kt  TextAssemblerTest.kt  WindowResolverTest.kt
apps/mobile/scripts/: build-ffi.sh  smoke-test.sh
docs/: README.md  architecture.md  content-classification.md  edge-daemons.md  evaluation-and-ci.md  foundation.md  mission.md  network-pipeline.md  security-backlog.md
docs/architecture/: content-classification.md  overview.md
docs/backend/: PLAN.md
docs/components/android-service/: plan.md
docs/components/backend/: plan.md
docs/components/desktop/: plan.md  sync-plan.md
docs/components/frontend/: plan.md
docs/components/image-sandbox/: plan.md
docs/components/ios-app/: notes.md
docs/components/machine-learning/: plan.md  results.md
docs/components/machine-learning/experiments/: README.md  anime-subsampling.md  full-unfreeze.md
docs/components/mitm-proxy/: plan.md
docs/components/mobile/: backlog.md  plan.md
docs/components/net-shield/: plan.md
docs/components/text-policy/: plan.md
docs/components/video-watchdog/: plan.md
docs/components/voice-gate/: plan.md
docs/components/win-daemon/: plan.md
docs/components/win-network/: plan.md
docs/decisions/: README.md  accountability.md  classifier-operating-point.md  content-interception.md  crisis-surface.md  formation-model.md  inference-pipeline.md  learning-from-feedback.md  protection-modes.md  verse-pools.md  verse-selection.md
docs/desktop/: DESKTOP_SYNC_PLAN.md  PLAN.md
docs/engineering/: aspect-skills-plan.md  evaluation-and-ci.md
docs/flows/: README.md  block.md  override-gate.md  partner-setup.md  protection-mode-change.md  warn-interstitial.md
docs/frontend/: PLAN.md
docs/image-sandbox/: PLAN.md
docs/machine-learning/: PLAN.md
docs/net-shield/: PLAN.md
docs/product/flows/: README.md  block.md  override-gate.md  partner-setup.md  protection-mode-change.md  warn-interstitial.md
docs/proxy/: PLAN.md
docs/text-policy/: PLAN.md
docs/video-watchdog/: PLAN.md
docs/voice-gate/: PLAN.md
docs/win-daemon/: PLAN.md
docs/win-network/: PLAN.md
machine-learning/: .env.example  README.md  pyproject.toml
machine-learning/src/holy_blocker_ml/: __init__.py  anime.py  checkpointing.py  config.py  corpus.py  dataset.py  env.py  eval.py  export.py  export_tflite.py  extract.py  features.py  finetune.py  gate.py  harness.py  labels.py  medium.py  metrics.py  model.py  quantize.py  score.py  train.py
machine-learning/tests/: conftest.py  test_anime.py  test_checkpointing.py  test_corpus.py  test_dataset.py  test_env.py  test_eval.py  test_export.py  test_features.py  test_finetune.py  test_gate.py  test_harness.py  test_medium.py  test_metrics.py  test_model.py  test_score.py  test_train.py
native-modules/win-daemon/: CMakeLists.txt  README.md
native-modules/win-daemon/src/: main.cpp
native-modules/win-network/: CMakeLists.txt
native-modules/win-network/fake_win32/: fake_iphelper.cpp  fake_pipe.cpp  fake_registry.cpp  fake_scm.cpp  fake_wintun.cpp  recorder.cpp  recorder.h  win32_api.h
native-modules/win-network/src/: installer_actions.cpp  installer_actions.h  ipc_server.cpp  ipc_server.h  main.cpp  routing.cpp  routing.h  service_host.cpp  service_host.h  wintun_adapter.cpp  wintun_adapter.h
native-modules/win-network/tests/: test_ipc_server.cpp  test_logic.cpp  test_routing.cpp  test_wintun_adapter.cpp
native-modules/win-network/tests/integration/: test_routing_live.cpp  test_wintun_install.cpp
