[project]
name = "holy-blocker-ml"
version = "0.1.0"
description = "Local ML pipeline for Holy Blocker baseline classifiers."
# 3.13 is the ceiling: litert-torch pulls in torchao, which does not import on
# 3.14 (it mutates `__module__` on a typing.Union, rejected since 3.14).
requires-python = ">=3.11,<3.14"
dependencies = [
  "torch>=2.12,<2.13",
  "torchvision>=0.27,<0.28",
  "onnx>=1.16",
  # torch>=2.9 routes torch.onnx.export through the dynamo exporter, which
  # requires onnxscript at runtime.
  "onnxscript>=0.1",
  "onnxruntime>=1.17",
  "pillow>=10.0",
  "numpy>=1.26"
]

[project.optional-dependencies]
test = ["pytest"]
# TFLite conversion for Android. litert-torch is the successor to ai-edge-torch
# (renamed and deprecated upstream) and replaces the old torch -> ONNX -> TF
# SavedModel -> TFLite path, so `tensorflow` is no longer a dependency.
tflite = ["litert-torch>=0.7"]
# Fetching gated evaluation corpora from the Hugging Face Hub.
data = ["huggingface-hub>=0.20"]

[project.scripts]
holy-blocker-train = "holy_blocker_ml.train:main"
holy-blocker-export = "holy_blocker_ml.export:main"
holy-blocker-eval = "holy_blocker_ml.harness:main"
holy-blocker-extract = "holy_blocker_ml.extract:main"
holy-blocker-finetune = "holy_blocker_ml.finetune:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/holy_blocker_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: full MobileNetV3 conversions; deselect with -m 'not slow'",
]
